--- a/cs/investment.html
+++ b/cs/investment.html
@@ -170,7 +170,7 @@
               <p class="investment-body__text">V současné době je projekt financován na úkor vlastních prostředků a prostředků investorů.</p>
               <p class="investment-body__text">Naším hlavním cílem při práci s investory — je X100<br> pro investory</p>
               <ul class="lead__download-links-list">
-                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Stáhnout na Android</a></li>
+                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_type_android-cs">Stáhnout na Android</a></li>
                 <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_type_ios-invest">Stáhnout na IOS</a></li>
 
               </ul>
