--- a/cs/news.html
+++ b/cs/news.html
@@ -175,8 +175,8 @@
                     </div>
                     <div id="modalOne" class="modalOne">
                       <div class="modal-content-one">
-                        <span class="closeOne">&times;</span>
-                        <div class="modal-main" id="modal-main">
+                        <span class="closeOne" id="modal-main">&times;</span>
+                        <div class="modal-main">
                           <h2>AKTUALIZACE 05.12.2022</h2>
                           <p>06.12.2022 by DIANA AKHMETOVA COMMENTS</p>
                         </div>
@@ -188,7 +188,7 @@
                             <p>Naši vývojáři usilovně pracují na vylepšení aplikace. Již nyní na iOS (v0.93.32) byl optimalizován kód SFERA Feed a funkce počítadla nepřečtených zpráv ASAP, což vám umožňuje rychle najít chyby a vylepšit aplikace.</p>
                             <p>Na Androidu (v0.0.94) byla přepsána logika práce s časem doručení zpráv, díky čemuž byly opraveny chyby v pořadí zpráv a opakování dat mezi nimi. Byly opraveny chyby, které se vyskytly během videohovorů nebo audiohovorů, a byla přidána funkce pro zobrazování odkazů v informacích chatu. Implementováno stránkování kronik v uživatelském profilu, které umožňuje zobrazovat obsah ve feedu v chronologickém pořadí.</p>  
                             <p>Náš tým vám děkuje, že pomáháte vylepšit aplikaci SFERA! Prosíme Vás, abyste aplikaci aktivně využívali a informovali náš tým o nedostatcích v systému a přáních na jeho vylepšení.</p> 
-                            <div class="modal-footer"><a href="#modal-main" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
+                            <div class="modal-footer"><a href="#modal-main" class="modal-arrow"><img src="../assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                         </div>
                       </div>
                     </div>
@@ -214,8 +214,8 @@
                       </div>
                       <div id="modalTwo" class="modalTwo">
                         <div class="modal-content-two">
-                          <span class="closeTwo">&times;</span>
-                          <div class="modal-main" id="modal-main2">
+                          <span class="closeTwo" id="modal-main2">&times;</span>
+                          <div class="modal-main">
                             <h2>PATCHNOTE 07.07.2022</h2>
                             <p>07.07.2022 BY DIANA AKHMETOVA COMMENTS</p>
                           </div>
@@ -415,7 +415,7 @@
                               <p>Mnoho úloh prováděných v systému na serveru není v seznamu zahrnuto. </p>
                               <p>Používejte SFERA a pošlete nám své návrhy na zlepšení naší aplikace. Tímto způsobem přispějete k produktu, který bude pro uživatele skutečně užitečný, protože je vytvořen za účelem vývoje a řešení skutečných problémů!</p>
                             </ol>
-                            <div class="modal-footer"><a href="#modal-main2" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
+                            <div class="modal-footer"><a href="#modal-main2" class="modal-arrow"><img src="../assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                         </div>
                         </div>
                       </div>
@@ -440,8 +440,8 @@
                         </div>
                         <div id="modalThree" class="modalThree">
                           <div class="modal-content-three">
-                            <span class="closeThree">&times;</span>
-                            <div class="modal-main" id="modal-main3">
+                            <span class="closeThree" id="modal-main3">&times;</span>
+                            <div class="modal-main">
                               <h2>PATCHNOTE 26.05.2022</h2>
                               <p>26.05.2022 BY DIANA AKHMETOVA COMMENTS</p>
                             </div>
@@ -565,7 +565,7 @@
                                 <li>Přidána nápověda k omezení počtu znaků pro zadávání přezdívky.</li>
                                 <p>Seznam neobsahuje mnoho vnitro systémových úloh prováděných na serveru. Zanechte připomínky k aplikaci a my ji ještě vylepšíme</p>
                               </ol>
-                              <div class="modal-footer"><a href="#modal-main3" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
+                              <div class="modal-footer"><a href="#modal-main3" class="modal-arrow"><img src="../assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                             </div>
                           </div>
                         </div>
@@ -590,8 +590,8 @@
                           </div>
                           <div id="modalFor" class="modalFor">
                             <div class="modal-content-for">
-                              <span class="closeFor">&times;</span>
-                              <div class="modal-main" id="modal-main4">
+                              <span class="closeFor" id="modal-main4">&times;</span>
+                              <div class="modal-main">
                                 
                                 <p>10.04.2022 BY DIANA AKHMETOVA</p>
                               </div>
@@ -964,7 +964,7 @@
                                   <li>Oprava chyby, která způsobovala, že se po kliknutí na tlačítko “Reproduktor” reproduktor nezapnul.</li>
                                 </ol>
                                 <p>V seznamu není zahrnuto mnoho vnitřních architektonických úkolů a chyb, které se vyskytly během vývoje Job Lite, Find Friends, Novinky SFERA, a také chyby, které se vyskytly během testovacích verzí.</p>
-                                <div class="modal-footer"><a href="#modal-main4" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
+                                <div class="modal-footer"><a href="#modal-main4" class="modal-arrow"><img src="../assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                               </div>
                             </div>
                           </div>
@@ -990,7 +990,7 @@
         <div class="footer__download-links">
           <h2 class="footer__title color_grey">My nebudem měnit svět,<br> My přepíšeme kod.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Stáhnout na Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android button_type_android-cs ">Stáhnout na Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Stáhnout na IOS</a></li>
 
           </ul>
