--- a/cs/team.html
+++ b/cs/team.html
@@ -347,7 +347,7 @@
               <div class="footer__download-links">
                 <h2 class="footer__title color_grey">My nebudem měnit svět,<br> My přepíšeme kod.</h2>
                 <ul class="footer__download-links-list">
-                  <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Stáhnout na Android </a></li>
+                  <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android button_type_android-cs">Stáhnout na Android </a></li>
                   <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Stáhnout na IOS</a></li>
                 </ul>
               </div>
