--- a/en/apps.html
+++ b/en/apps.html
@@ -530,7 +530,7 @@
         <div class="footer__download-links">
           <h2 class="footer__title color_grey">We will not change the world.<br>We'll rewrite the code.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Download on Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
           </ul>
         </div>
