--- a/en/downloads.html
+++ b/en/downloads.html
@@ -133,7 +133,7 @@
         <li class="download_button-tablet">
           <ul class="downloads_button">
             <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios">Download on iOS</a></li>
-            <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android">Download on Android </a></li>
+            <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android ">Download on Android </a></li>
           </ul>
         </li>
         <li class="link_tablet-menu" >
@@ -169,7 +169,7 @@
               <h1 class="lead__title">DOWNLOAD<br><span  class="lead__title-color">AND TEST</span></h1>
               <p class="lead__subtitle">Download apps and dive in<br>into our digital ecosystem.</p>
               <ul class="lead__download-links-list">
-                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Download on Android </a></li>
+                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android </a></li>
 									<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
               </ul>
             </div>
