--- a/en/investment.html
+++ b/en/investment.html
@@ -170,7 +170,7 @@
               <p class="investment-body__text">At the moment, the financing of the project is carried out using own funds and investors' funds.</p>
               <p class="investment-body__text">Our main goal in working with investors is X100 for investors</p>
               <ul class="lead__download-links-list">
-                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Download on Android</a></li>
+                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android</a></li>
                 <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_type_ios-invest">Download on iOS</a></li>
               </ul>
             </div>
@@ -270,7 +270,7 @@
         <div class="footer__download-links">
           <h2 class="footer__title color_grey">We will not change the world.<br>We'll rewrite the code.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Download on Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
           </ul>
         </div>
