--- a/en/news.html
+++ b/en/news.html
@@ -177,8 +177,8 @@
                   </div>
                   <div id="modalOne" class="modalOne">
                     <div class="modal-content-one">
-                      <span class="closeOne">&times;</span>
-                      <div class="modal-main" id="modal-main">
+                      <span class="closeOne" id="modal-main">&times;</span>
+                      <div class="modal-main">
                         <h2>UPDATE 29.12. 2022</h2>
                         <p>29.12.2022 by DIANA AKHMETOVA COMMENTS</p>
                       </div>
@@ -194,7 +194,7 @@
                             In addition to all of the above, many other bugs have been fixed, which you help us identify.</p> 
                           <p>Use SFERA, improve your rating and don’t forget to send us suggestions on  how to do better the app.</p>
 
-                          <div class="modal-footer"><a href="#modal-main" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
+                          <div class="modal-footer"><a href="#modal-main" class="modal-arrow"><img src="../assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
 
                       </div>
                     </div>
@@ -220,8 +220,8 @@
                     </div>
                     <div id="modalTwo" class="modalTwo">
                       <div class="modal-content-two">
-                        <span class="closeTwo">&times;</span>
-                        <div class="modal-main" id="modal-main2">
+                        <span class="closeTwo" id="modal-main2">&times;</span>
+                        <div class="modal-main">
                           <h2>UPDATE 05.12.2022</h2>
                           <p>05.12.2022 BY DIANA AKHMETOVA COMMENTS</p>
                         </div>
@@ -233,7 +233,7 @@
                           <p>Our developers are working hard to improve the application. Already on iOS (v0.93.32) we have optimized the SFERA Feed code and the unread message counter functionality in ASAP, which allows you to quickly find bugs and make improvements to the App.</p>  
                           <p>Android (v0.0.94) rewritten the logic of the message time, which fixed bugs with the order of messages and repetition of dates between them. Bugs occurring during video or audio calls have been fixed, as well as the functionality for displaying links in the chat information has been added. Released the pagination of Chronicles in the Main Profile, which allows you to display content in the feed in chronological order.</p>
                           <p>Our team thanks you for helping to make the SFERA App better! We kindly ask you to actively use the application and inform our team about the system’s shortcomings and suggestions for improvement. </p>
-                          <div class="modal-footer"><a href="#modal-main2" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
+                          <div class="modal-footer"><a href="#modal-main2" class="modal-arrow"><img src="../assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                       </div>
                       </div>
                     </div>
@@ -258,8 +258,8 @@
                       </div>
                       <div id="modalThree" class="modalThree">
                         <div class="modal-content-three">
-                          <span class="closeThree">&times;</span>
-                          <div class="modal-main" id="modal-main3">
+                          <span class="closeThree" id="modal-main3">&times;</span>
+                          <div class="modal-main">
                             <h2>PATCHNOTE 04.08.2022</h2>
                             <p>05.08.2022 BY DIANA AKHMETOVA COMMENTS</p>
                           </div>
@@ -540,7 +540,7 @@
                               <li>Implemented functionality Download video</li>
                               <li>The Share Video feature is implemented</li>
                             </ol>
-                            <div class="modal-footer"><a href="#modal-main3" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
+                            <div class="modal-footer"><a href="#modal-main3" class="modal-arrow"><img src="../assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                           </div>
                         </div>
                       </div>
@@ -565,8 +565,8 @@
                         </div>
                         <div id="modalFor" class="modalFor">
                           <div class="modal-content-for">
-                            <span class="closeFor">&times;</span>
-                            <div class="modal-main" id="modal-main4">
+                            <span class="closeFor" id="modal-main4">&times;</span>
+                            <div class="modal-main">
                               
                               <p>02.08.2022 BY DIANA AKHMETOVA</p>
                             </div>
@@ -589,7 +589,7 @@
                                 <li>evaluation of the publication.</li>
                               </ul>
                               <p>The first users have an advantage in increasing the rating of their profile. To do this, you just need to actively use the application. In the future, when the number of users in SFERA will actively grow, it will be much more difficult to increase the rating. We recommend starting to raise your rating in the SFERA digital ecosystem right now.</p> 
-                              <div class="modal-footer"><a href="#modal-main4" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
+                              <div class="modal-footer"><a href="#modal-main4" class="modal-arrow"><img src="../assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                             </div>
                           </div>
                         </div>
@@ -615,7 +615,7 @@
         <div class="footer__download-links">
           <h2 class="footer__title color_grey">My nebudem měnit svět,<br> My přepíšeme kod.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Stáhnout na Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android ">Stáhnout na Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Stáhnout na IOS</a></li>
           </ul>
         </div>
