--- a/en/startups.html
+++ b/en/startups.html
@@ -133,7 +133,7 @@
         <li class="download_button-tablet">
           <ul class="downloads_button">
             <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios">Download on iOS</a></li>
-            <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android">Download on Android </a></li>
+            <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android ">Download on Android </a></li>
           </ul>
         </li>
         <li class="link_tablet-menu" >
@@ -173,7 +173,7 @@
                 into SFERA, subject to the following conditions.</p>
               <div class="lead__links-container apps__lead-links-container">
                 <ul class="lead__download-links-list">
-                  <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Download on Android</a></li>
+                  <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android</a></li>
 									<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
                 </ul>
               </div>
@@ -226,7 +226,7 @@
         <div class="footer__download-links">
           <h2 class="footer__title color_grey">We will not change the world.<br>We'll rewrite the code.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Download on Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
           </ul>
         </div>
