--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="description" content="Описание страницы">
-
-
   	<link rel="icon" href="./assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   	<link rel="icon" href="./assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   	<link rel="icon" href="./assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
 		<meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SFERE platform, dozens of applications interact closely with each other.">
-
-
 		<meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
 		<title>SFERA Project &#x2d; Official website, social network.</title>
 		<link rel="stylesheet" href="assets/css/landing.css">
@@ -175,7 +171,7 @@
 						<li class="link-list-left-color">All free and without ads</li>
 						<li class="lead__links-container apps__lead-links-container">
 							<ul class="lead__download-links-list">
-								<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Download on Android </a></li>
+								<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android </a></li>
 								<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
 							</ul>
 						</li>
@@ -447,7 +443,7 @@
         <div class="footer__download-links">
           <h2 class="footer__title color_grey">We will not change the world.<br>We'll rewrite the code.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Download on Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
           </ul>
         </div>
