--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 							</div>
 							<div class="left-side"></div>
 						</div>
-						<p class="card-block-botton eng-card-block-botton">Multifunctional messenger</p>
+						<p class="card-block-botton">Multifunctional messenger</p>
 					</div>
 				<div class="card-block">
 					<button class="card-block-top">Profile</button>
@@ -245,7 +245,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton eng-card-block-botton">Personal page with personal information</p>
+					<p class="card-block-botton">Personal page with personal information</p>
 				</div>
 				<div class="card-block">
 					<button class="card-block-top">Feed</button>
@@ -258,7 +258,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton eng-card-block-botton">News Feed with educational content</p>
+					<p class="card-block-botton">News Feed with educational content</p>
 				</div>
 				<div class="card-block">
 					<button class="card-block-top">VideoS</button>
@@ -271,7 +271,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton eng-card-block-botton">Short videos with useful content</p>
+					<p class="card-block-botton">Short videos with useful content</p>
 				</div>
 				<div class="card-block">
 					<button class="card-block-top">BlackBox</button>
@@ -284,7 +284,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton eng-card-block-botton">Communication search service based on geolocation</p>
+					<p class="card-block-botton">Communication search service based on geolocation</p>
 				</div>
 				<div class="card-block">
 					<button class="card-block-top">FindFriends</button>
@@ -297,7 +297,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton eng-card-block-botton">Finding Friends In offline life</p>
+					<p class="card-block-botton">Finding Friends In offline life</p>
 				</div>
 				<div class="card-block eng-card-block">
 					<button class="card-block-top eng-card-block-top">MeetNet</button>
@@ -312,7 +312,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton eng-card-block-botton">Sub-Application for dating and finding beloved one</p>
+					<p class="card-block-botton">Sub-Application for dating and finding beloved one</p>
 				</div>
 				<div class="card-block">
 					<button class="card-block-top">JobLite</button>
@@ -323,9 +323,9 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/08-Job-Lite-android-eng.gif" alt="Job search">
 						</div>
-						<div class="left-side "></div>
+						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton eng-card-block-botton">Search platform for jobs and employees</p>
+					<p class="card-block-botton ">Search platform for jobs and employees</p>
 				</div>
 				<div class="card-block">
 					<button class="card-block-top">Choose</button>
@@ -338,7 +338,7 @@
 						</div>
 						<div class="left-side "></div>
 					</div>
-					<p class="card-block-botton eng-card-block-botton">Tough choice? Askadvice from other users</p>
+					<p class="card-block-botton">Tough choice? Askadvice from other users</p>
 				</div>
 				<div class="card-block card-block-botton eng-card-block eng-card-block-botton">
 					<a class="card-block__link eng-card-block__link"  href="./en/apps.html">SFERA Applications &#8702; </a>
