--- a/cs/index.html
+++ b/cs/index.html
@@ -194,9 +194,10 @@
 				</div>
 			</section>
 			<section class="section-as" id="abot-us">
-				<p class="section-as-heading">ZJISTI<span class="section-as-heading-color"> O NÁS</span> VÍC</p>
+				<p class="section-as-heading">ZJISTI<span class="section-as-heading-color">O NÁS</span>VÍC</p>
 				<div class="section-as-video">
-					<iframe class="section-as-iframe-video" src="https://www.youtube.com/embed/Ok8da78v8tA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<iframe class="section-as-iframe-video" src="https://www.youtube.com/embed/ByVP8i9S92Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					
 				</div>
 				</div>
 			</section>
