--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -166,7 +166,7 @@
         <div class="lead__wrapper">
           <div class="lead__content">
             <div class="lead-text">
-              <h1 class="lead__title">СКАЧИВАЙ<br><span  class="lead__title-color">И ТЕСТИРУЙ</span></h1>
+              <h1 class="lead__title">Скачивай<br><span  class="lead__title-color">и тестируй</span></h1>
               <p class="lead__subtitle">Скачивайте приложения и погружайтесь<br>в нашу цифровую экосистему.</p>
               <ul class="lead__download-links-list">
                 <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
