--- a/ru/team.html
+++ b/ru/team.html
@@ -149,7 +149,7 @@
             <div class="langs">
                 <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
                 <ul class="langs__list">
-                    <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="флаг английский"></a>
+                    <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="флаг английский"></a>
                         <div class="dropdown-menu__content langs__submenu">
                             <ul class="langs__list">
                                 <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/team.html">EN<img class="langs-image" src="../assets/img/favicons/gb.svg" alt="флаг английский"></a></li>
