--- a/cs/index.html
+++ b/cs/index.html
@@ -171,8 +171,8 @@
 						<li class="link-list-left-color">Vše zadarmo a bez reklamy</li>
 						<li class="lead__links-container apps__lead-links-container">
 							<ul class="lead__download-links-list">
-								<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Stáhnout na Android </a></li>
-								<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Stáhnout na IOS</a></li>
+								<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_ios_tablet">Stáhnout na Android </a></li>
+								<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_android_tablet">Stáhnout na IOS</a></li>
 							</ul>
 						</li>
 					</ul>
