--- a/cs/team.html
+++ b/cs/team.html
@@ -132,8 +132,8 @@
                   </li>
                   <li class="download_button-tablet">
                     <ul class="downloads_button">
-                        <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios">Stáhnout na iOS</a></li>
-                        <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android">Stáhnout na Android </a></li>
+                        <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios button_ios_tablet">Stáhnout na iOS</a></li>
+                        <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android button_android_tablet">Stáhnout na Android </a></li>
                     </ul>
                 </li>
                 <li class="link_tablet-menu" >
@@ -347,7 +347,7 @@
               <div class="footer__download-links">
                 <h2 class="footer__title color_grey">My nebudem měnit svět,<br> My přepíšeme kod.</h2>
                 <ul class="footer__download-links-list">
-                  <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android button_type_android-cs">Stáhnout na Android </a></li>
+                  <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android ">Stáhnout na Android </a></li>
                   <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Stáhnout na IOS</a></li>
                 </ul>
               </div>
