--- a/ru/news.html
+++ b/ru/news.html
@@ -132,8 +132,8 @@
                   </li>
                   <li class="download_button-tablet">
                     <ul class="downloads_button">
-                      <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios">Скачать на iOS</a></li>
-                      <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android">Скачать на Android </a></li>
+                      <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios button_ios_tablet">Скачать на iOS</a></li>
+                      <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android button_android_tablet">Скачать на Android </a></li>
                     </ul>
                   </li>
                   <li class="link_tablet-menu" >
