--- a/en/news.html
+++ b/en/news.html
@@ -175,7 +175,7 @@
                   <div class="container">
                     <a id="btnOne">READ MORE</a>
                   </div>
-                  <div id="modalOne" class="modalOne">
+                  <div id="modalOne" class="modalOne P_4">
                     <div class="modal-content-one">
                       <span class="closeOne" id="modal-main">&times;</span>
                       <div class="modal-main">
@@ -218,7 +218,7 @@
                     <div class="container">
                       <a id="btnTwo">READ MORE</a>
                     </div>
-                    <div id="modalTwo" class="modalTwo">
+                    <div id="modalTwo" class="modalTwo P_4">
                       <div class="modal-content-two">
                         <span class="closeTwo" id="modal-main2">&times;</span>
                         <div class="modal-main">
@@ -256,7 +256,7 @@
                       <div class="container">
                         <a id="btnThree">READ MORE</a>
                       </div>
-                      <div id="modalThree" class="modalThree">
+                      <div id="modalThree" class="modalThree P_4">
                         <div class="modal-content-three">
                           <span class="closeThree" id="modal-main3">&times;</span>
                           <div class="modal-main">
@@ -563,7 +563,7 @@
                         <div class="container">
                           <a id="btnFor">READ MORE</a>
                         </div>
-                        <div id="modalFor" class="modalFor">
+                        <div id="modalFor" class="modalFor P_4">
                           <div class="modal-content-for">
                             <span class="closeFor" id="modal-main4">&times;</span>
                             <div class="modal-main">
