--- a/en/news.html
+++ b/en/news.html
@@ -173,11 +173,11 @@
               <ul class="lead__text__link">
                 <li class="lead__texts">Even on New Year's Eve we are in the process of developing and refining the functionality of the SFERA app and updates are already available.
                   <div class="container">
-                    <a id="btnOne">READ MORE</a>
+                    <a id="btnOne" class="popup-link" href="#modalOne">READ MORE</a>
                   </div>
-                  <div id="modalOne" class="modalOne P_4">
+                  <div id="modalOne" class="modalOne">
                     <div class="modal-content-one">
-                      <span class="closeOne" id="modal-main">&times;</span>
+                      <span class="closeOne close-popup" id="modal-main">&times;</span>
                       <div class="modal-main">
                         <h2>UPDATE 29.12. 2022</h2>
                         <p>29.12.2022 by DIANA AKHMETOVA COMMENTS</p>
@@ -216,11 +216,11 @@
                 <ul class="lead__text__link">
                   <li class="lead__texts">Recently SFERA added the ability to make video calls, and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.
                     <div class="container">
-                      <a id="btnTwo">READ MORE</a>
+                      <a id="btnTwo" class="popup-link" href="#modalTwo">READ MORE</a>
                     </div>
-                    <div id="modalTwo" class="modalTwo P_4">
+                    <div id="modalTwo" class="modalTwo">
                       <div class="modal-content-two">
-                        <span class="closeTwo" id="modal-main2">&times;</span>
+                        <span class="closeTwo close-popup" id="modal-main2">&times;</span>
                         <div class="modal-main">
                           <h2>UPDATE 05.12.2022</h2>
                           <p>05.12.2022 BY DIANA AKHMETOVA COMMENTS</p>
@@ -256,7 +256,7 @@
                       <div class="container">
                         <a id="btnThree">READ MORE</a>
                       </div>
-                      <div id="modalThree" class="modalThree P_4">
+                      <div id="modalThree" class="modalThree">
                         <div class="modal-content-three">
                           <span class="closeThree" id="modal-main3">&times;</span>
                           <div class="modal-main">
@@ -563,7 +563,7 @@
                         <div class="container">
                           <a id="btnFor">READ MORE</a>
                         </div>
-                        <div id="modalFor" class="modalFor P_4">
+                        <div id="modalFor" class="modalFor">
                           <div class="modal-content-for">
                             <span class="closeFor" id="modal-main4">&times;</span>
                             <div class="modal-main">
