--- a/en/news.html
+++ b/en/news.html
@@ -254,11 +254,11 @@
                   <ul class="lead__text__link">
                     <li class="lead__texts">The app version check and update occurs automatically. In the profile settings you can link Google and Apple accounts. ASAP on Android now has the "Mark as Read" feature. And in Choose on iOS, you can access your profile from the avatar of the questioner and commentator. VideoS is divided into categories. Choose what to watch: success stories, poems, parables or quotes. Download your favorite videos and share with friends. Take advantage of first-time users and increase your rating by actively using the app.
                       <div class="container">
-                        <a id="btnThree">READ MORE</a>
+                        <a id="btnThree" class="popup-link" href="#modalThree">READ MORE</a>
                       </div>
                       <div id="modalThree" class="modalThree">
                         <div class="modal-content-three">
-                          <span class="closeThree" id="modal-main3">&times;</span>
+                          <span class="closeThree close-popup" id="modal-main3">&times;</span>
                           <div class="modal-main">
                             <h2>PATCHNOTE 04.08.2022</h2>
                             <p>05.08.2022 BY DIANA AKHMETOVA COMMENTS</p>
@@ -561,11 +561,11 @@
                     <ul class="lead__text__link">
                       <li class="lead__texts">One of the features of the SFERA digital ecosystem is the rating. Each user has a starting rating of 2.5. It is displayed in the main profile next to the user's photo. The rating affects the user's interaction with other users in the system and the promotion of the profile.
                         <div class="container">
-                          <a id="btnFor">READ MORE</a>
+                          <a id="btnFor" class="popup-link" href="#modalFor">READ MORE</a>
                         </div>
                         <div id="modalFor" class="modalFor">
                           <div class="modal-content-for">
-                            <span class="closeFor" id="modal-main4">&times;</span>
+                            <span class="closeFor close-popup" id="modal-main4">&times;</span>
                             <div class="modal-main">
                               
                               <p>02.08.2022 BY DIANA AKHMETOVA</p>
