--- a/ru/news.html
+++ b/ru/news.html
@@ -173,11 +173,11 @@
                 <ul class="lead__text__link">
                   <li class="lead__texts">В версии v0.0.99 для Android добавлен функционал блокировки собеседника в ASAP и реализована новая кнопка создания чата. Пользователи, у которых Android уже обновился до 13 версии, теперь могут без проблем выдать разрешение на загрузку файлов с телефона. А найти нужный чат или контакт можно легко по ID.
                     <div class="container">
-                      <a id="btnOne">Читать больше</a>
+                      <a id="btnOne" class="popup-link" href="#modalOne">Читать больше</a>
                     </div>
                     <div id="modalOne" class="modalOne">
                       <div class="modal-content-one">
-                        <span class="closeOne" id="modal-main">&times;</span>
+                        <span class="closeOne close-popup" id="modal-main">&times;</span>
                         <div class="modal-main">
                           <h2>ОБНОВЛЕНИЕ 29.12. 2022</h2>
                           <p>29.12.2022 ОТ DIANA AKHMETOVA КОММЕНТАРИИ</p>
@@ -214,11 +214,11 @@
                   <ul class="lead__text__link">
                     <li class="lead__texts">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.
                       <div class="container">
-                        <a id="btnTwo">Читать больше</a>
+                        <a id="btnTwo" href="#modalTwo" class="popup-link">Читать больше</a>
                       </div>
                       <div id="modalTwo" class="modalTwo">
                         <div class="modal-content-two">
-                          <span class="closeTwo" id="modal-main2">&times;</span>
+                          <span class="closeTwo close-popup" id="modal-main2">&times;</span>
                           <div class="modal-main">
                             <h2>ОБНОВЛЕНИЕ 05.12.2022</h2>
                             <p>05.12.2022 ОТ DIANA AKHMETOVA КОММЕНТАРИИ</p>
@@ -252,11 +252,11 @@
                     <ul class="lead__text__link">
                       <li class="lead__texts">Внимание, внимание! В обновленной версии SFERA произошли значительные изменения.С сегодняшнего дня мы запускаем альфа-версию видеозвонков в приложении Asap для Android и iOS. Вы можете переключаться между голосовым и видеозвонком во время разговора, а также переписываться в чатах, не завершая звонок: его можно свернуть в небольшое окно в углу экрана.
                         <div class="container">
-                          <a id="btnThree">Читать больше</a>
+                          <a id="btnThree" href="#modalThree" class="popup-link">Читать больше</a>
                         </div>
                         <div id="modalThree" class="modalThree">
                           <div class="modal-content-three">
-                            <span class="closeThree" id="modal-main3">&times;</span>
+                            <span class="closeThree close-popup" id="modal-main3">&times;</span>
                             <div class="modal-main">
                               <h2>ОБНОВЛЕНИЕ 16.11.2022</h2>
                               <p>17.11.2022 ОТ DIANA AKHMETOVA КОММЕНТАРИИ</p>
@@ -294,11 +294,11 @@
                       <ul class="lead__text__link">
                         <li class="lead__texts">Лента SFERA — один из сервисов экосистемы SFERA. Это аналог новостной ленты, в которой появляются хроники и моменты из Профиля.
                           <div class="container">
-                            <a id="btnFor">Читать больше</a>
+                            <a id="btnFor" href="#modalFor" class="popup-link">Читать больше</a>
                           </div>
                           <div id="modalFor" class="modalFor">
                             <div class="modal-content-for">
-                              <span class="closeFor" id="modal-main4">&times;</span>
+                              <span class="closeFor close-popup" id="modal-main4">&times;</span>
                               <div class="modal-main">
                                 <h2>ЛЕНТА СФЕРА — ЭТО?<br>ОБНОВЛЕНИЕ 16.11.2022</h2>
                                 <p>02.11.2022 ОТ DIANA AKHMETOVA</p>
