--- a/ru/apps.html
+++ b/ru/apps.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
   <meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
   <meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
-  <title>SFERA</title>
+  <title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/apps.css">
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
