--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-  <title>SFERA</title>
+  <title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
   <meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
 	<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
@@ -20,7 +20,6 @@
 </head>
 <body>
   <div class="page">
-
     <nav class="nav_menu">
       <input type="checkbox" class="myCheckBox" id="myCheck">
       <label for="myCheck" class="checkButton">
