--- a/cs/index.html
+++ b/cs/index.html
@@ -116,7 +116,7 @@
 						<li class="nav_list-item active"><a class="nav_list-link" href="#">Hlavní</a></li>
 						<li class="nav_list-item"><a class="nav_list-link " href="./../cs/apps.html">Aplikace</a></li>
 						<li class="nav_list-item"><a class="nav_list-link" href="./../cs/downloads.html">Stáhnout</a></li>
-						<li class="nav_list-item"><a class="nav_list-link" href="./../cs/news.html">Novinky </a></li>
+						<li class="nav_list-item"><a class="nav_list-link" href="https://news.sfera.zone/cs/">Novinky </a></li>
 						<li class="nav_list-item"><a class="nav_list-link" href="./../cs/startups.html">Startupy</a></li>
 						<li class="nav_list-item"><a class="nav_list-link" href="./../cs/investment.html">Investice</a></li>
 						<li class="nav_list-item"><a class="nav_list-link" href="./../cs/team.html">Tým</a></li>
