--- a/ru/team.html
+++ b/ru/team.html
@@ -116,7 +116,7 @@
                     <li class="nav_list-item "><a class="nav_list-link " href="../ru/index.html">Главная</a></li>
                     <li class="nav_list-item"><a class="nav_list-link " href="../ru/apps.html">Приложения</a></li>
                     <li class="nav_list-item"><a class="nav_list-link" href="../ru/downloads.html">Скачать</a></li>
-                    <li class="nav_list-item"><a class="nav_list-link" href="../ru/news.html">Новости</a></li>
+                    <li class="nav_list-item"><a class="nav_list-link" href="https://news.sfera.zone/ru/">Новости</a></li>
                     <li class="nav_list-item"><a class="nav_list-link" href="../ru/startups.html">Стартапам</a></li>
                     <li class="nav_list-item"><a class="nav_list-link" href="../ru/investment.html">Инвестиции</a></li>
                     <li class="nav_list-item active"><a class="nav_list-link" href="#">Команда</a></li>
