--- a/en/investment.html
+++ b/en/investment.html
@@ -114,7 +114,7 @@
         <li class="nav_list-item"><a class="nav_list-link" href="../index.html">Home</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/apps.html">Applications</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="https://news.sfera.zone/">News</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
         <li class="nav_list-item active"><a class="nav_list-link" href="#">Investment</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
