--- a/en/startups.html
+++ b/en/startups.html
@@ -115,7 +115,7 @@
         <li class="nav_list-item"><a class="nav_list-link" href="../index.html">Home</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/apps.html">Applications</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="https://news.sfera.zone/">News</a></li>
         <li class="nav_list-item active"><a class="nav_list-link" href="#">Startups</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
