--- a/cs/investment.html
+++ b/cs/investment.html
@@ -184,17 +184,17 @@
       <section>
         <div class="card__wrapper">
           <div class="card">
-           <div class="card__column">
+           <!-- <div class="card__column">
             <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Bankovní karta" />
-          </div>
+          </div> -->
         <div class="card__column">
           <div class="card-body">
             <div class="card-body-content">
               <ol class="card-body__link">
 
-                <li class="card-body__list_1"> Zkopírujte číslo karty a odešlete požadovanou částku.</li>
+                <!-- <li class="card-body__list_1"> Zkopírujte číslo karty a odešlete požadovanou částku.</li>
 
-                <p id="card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<button onclick="copyText()" class="card-body__list_copy"><img src="../assets/img/investment/content_copy.svg" alt="img"></button></p>
+                <p id="card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<button onclick="copyText()" class="card-body__list_copy"><img src="../assets/img/investment/content_copy.svg" alt="img"></button></p> -->
 
                 <li class="card-body__list_3"> Pošlete E-mail s uvedením částky transakce. Zpětným dopisem my potvrdíme vámi zaslanou částku a spojíme ji s vaším E-mail.</li>
                 <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><img src="../assets/img/investment/content_copy.svg" alt=""></button></div>
