--- a/ru/investment.html
+++ b/ru/investment.html
@@ -145,7 +145,7 @@
 				</li> 
         </ul>
       </div>
-      <div class="langs">
+      <div class="langs langs-rus">
         <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
             <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU<img class="langs-image" src="../assets/img/favicons/ru.svg" alt="флаг русский"></a>
